﻿drkns 02.01.2014 18:06:05 +0200 - build 3754

1. Оптимизация перемещения внутренних классов.

drkns 02.01.2014 04:33:52 +0200 - build 3753

1. Продолжение 3752.

drkns 02.01.2014 02:55:55 +0200 - build 3752

1. Оптимизация, аналогичная 3401: каждый элемент файловой панели занимает примерно на 200 байт меньше памяти.

drkns 31.12.2013 16:06:31 +0200 - build 3751

1. Рефакторинг.

2. Уточнение 3749.

3. Нажатие ShiftF9 всегда принудительно сохраняет настройки, "не занимаясь эвристикой и оптимизацией".

drkns 31.12.2013 03:05:45 +0200 - build 3750

1. Нажатие F4 в меню групп масок приводило к падению.

drkns 31.12.2013 00:38:12 +0200 - build 3749

1. Рефакторинг.

drkns 30.12.2013 21:25:21 +0200 - build 3748

1. Рефакторинг.

drkns 26.12.2013 19:36:19 +0200 - build 3747

1. Уточнение 3746.

drkns 26.12.2013 01:21:42 +0200 - build 3746

1. Рефакторинг.

drkns 21.12.2013 22:00:20 +0200 - build 3745

1. Уточнение 3744.1.

drkns 21.12.2013 21:20:13 +0200 - build 3744

1. Рефакторинг.

2. Утечки памяти при запуске с ключом /v или /e.

drkns 15.12.2013 04:54:32 +0200 - build 3743

1. Уточнение 3738.

drkns 13.12.2013 22:15:29 +0200 - build 3742

1. Уточнение 3738.

svs 13.12.2013 12:06:12 +0400 - build 3741

1. Mantis#0002545: GUID для меню параметров плагинов

    PluginsConfigMenuId   =  {B4C242E7-AA8E-4449-B0C3-BD8D9FA11AED} --> Menu.Id

drkns 13.12.2013 09:23:31 +0200 - build 3740

1. Уточнение 3738.

drkns 13.12.2013 01:21:33 +0200 - build 3739

1. VC10 fix.

drkns 13.12.2013 00:57:54 +0200 - build 3738

1. Рефакторинг.

drkns 09.12.2013 20:56:45 +0200 - build 3737

1. В 3733 погнулась раскраска файлов.

w17 09.12.2013 14:03:54 +0400 - build 3736

1. Уточнение 3678 (M#2496)

w17 09.12.2013 13:43:23 +0400 - build 3735

1. M#2543: неверная работа Panel.SetPosIdx при включенном фильтре в панели

svs 09.12.2013 10:55:43 +0400 - build 3734

1. SQLite 3.8.2

drkns 08.12.2013 23:04:44 +0200 - build 3733

1. Рефакторинг.

svs 06.12.2013 14:31:24 +0400 - build 3732
